--- a/index.html
+++ b/index.html
@@ -100,7 +100,15 @@
        </div>
         <nav class="top-bar__nav collapsed" id="top-bar__nav">
           <ul class="top-bar__nav-list ">
-            <li><a href="">About</a></li>
+            <li>
+              <li><a href="about-us.html">About</a></li>
+              
+              <ul class="js-sub-menu sub-menu">
+                <a href="awareness-Campaign.html">Awareness Campaign </a>
+                <a href="technology.html">Technology</a>
+                <a href="quality-program.html">Quality Program</a>
+              </ul>
+            </li>
             <li><a href="">SOLUTION</a></li>
             <li><a href="">CASE STUDIES</a></li>
             <li><a href="">BLOG'S </a></li>
@@ -1118,6 +1126,7 @@ To always do what’s best for the customer. No matter what.
         setInterval(next7, 4000);
         </script>
 </script> -->
+
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/jquery.scrolly.min.js"></script>
