--- a/technology.html
+++ b/technology.html
@@ -44,7 +44,15 @@
     				</div>
     				<nav class="top-bar__nav collapsed" id="top-bar__nav">
     					<ul class="top-bar__nav-list ">
-    						<li><a href="">About</a></li>
+                <li>
+                  <li><a href="about-us.html">About</a></li>
+                  
+                  <ul class="js-sub-menu sub-menu">
+                    <a href="awareness-Campaign.html">Awareness Campaign </a>
+                    <a href="technology.html">Technology</a>
+                    <a href="quality-program.html">Quality Program</a>
+                  </ul>
+                </li>
     						<li><a href="">SOLUTION</a></li>
     						<li><a href="">CASE STUDIES</a></li>
     						<li><a href="">BLOG'S </a></li>
