--- a/index.html
+++ b/index.html
@@ -1105,7 +1105,7 @@ To always do what’s best for the customer. No matter what.
 </section>
 </div>
 </div>
-<!-- <script type="text/javascript">
+<script type="text/javascript">
 
         let slide7s = document.querySelectorAll('.slide7-container7');
         let index = 0;
@@ -1125,7 +1125,7 @@ To always do what’s best for the customer. No matter what.
         // auto play
         setInterval(next7, 4000);
         </script>
-</script> -->
+</script>
 
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
