--- a/about-us.html
+++ b/about-us.html
@@ -121,10 +121,85 @@
     </div>
   </section>
 
+ 
+
   <div class="goto" style="margin-top: -5px">
     <a href="#expect" id="moveDown" class="goto-next  aa">Next</a>
   </div>
 
+  <section class="scroll-area " id="expect3">
+    <div class='image-background'>
+      <div class='container h-100'>
+        <div class='row h-100 fgjkgjk align-items-center'>
+          <div class='col-12 text-center'>
+            <h1 class='display-2'>This is a About Page</h1>
+            <p class='lead'>Image taken from /r/wallpapers</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <div class="goto" style="margin-top: -5px">
+    <a href="#expect" id="moveDown" class="goto-next  aa">Next</a>
+  </div>
+
+  <section class="scroll-area " id="expect3">
+    <section class="footer_get_touch_outer">
+      <div class="container">
+        <div class="footer_get_touch_inner grid-70-30">
+          <div class="colmun-70 get_form">
+            <div class="get_form_inner">
+              <div class="get_form_inner_text">
+                <h3>Get In Touch</h3>
+              </div>
+              <form action="#">
+                <div class="grid-50-50">
+                  <input type="text" placeholder="First Name">
+                  <input type="text" placeholder="Last Name">
+                  <input type="email" placeholder="Email">
+                  <input type="tel" placeholder="Phone/Skype">
+                </div>
+                <div class="grid-full">
+                  <textarea placeholder="About Your Project" cols="30" rows="10"></textarea>
+                  <input type="submit" value="Submit">
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="colmun-30 get_say_form">
+            <h5>Say Hi!</h5>
+            <ul class="get_say_info_sec">
+              <li>
+                <i class="fa fa-envelope"></i>
+                <a href="mailto:">info@stackfindover.com</a>
+              </li>
+              <li>
+                <i class="fa fa-whatsapp"></i>
+                <a href="tel:">+91 9602381997</a>
+              </li>
+              <li>
+                <i class="fa fa-skype"></i>
+                <a href="#">Stackfindover</a> 
+              </li>
+            </ul>  
+            <ul class="get_say_social-icn">
+              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+            </ul>          
+          </div>        
+        </div>
+      </div>
+    </section>
+
+  </section>
+
+  <div class="goto" style="margin-top: -5px">
+    <a href="#expect3" id="moveDown" class="goto-next  aa">Next</a>
+  </div>
 
   <section class="scroll-area" id="expect" >
     <div class="container2">
